Changes for accessibility
Use CSS text-transform property instead of directly writing in all caps

--- a/about/about.scss
+++ b/about/about.scss
@@ -313,6 +313,7 @@ section.skills {
         text-align: center;
         margin: 0;
         opacity: 0.5;
+        text-transform: uppercase; //?
     }
     .divider {
         width: 100%;
