Change title (landing-preview)

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include head.html %}
-    <title>comfyte</title>
+    <title>comfyte (PREVIEW)</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/styles/landing.css">
     <script src="{{ site.baseurl }}/scripts/landing.js"></script>
 </head>
