--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,4 +1,5 @@
 <div class="header">
+    {% include wip-banner.html %} <!-- WIP banner message -->
     <div class="topbar_strip">
         <div class="topbar_container">
 
