Use old rgba() syntax

--- a/styles/wip-banner.scss
+++ b/styles/wip-banner.scss
@@ -15,7 +15,7 @@
     font-family: "Inter", sans-serif;
     color: black;
 
-    $stripes-color: rgb(0 0 0 / 0.05);
+    $stripes-color: rgba(0, 0, 0, 0.05);
     background: repeating-linear-gradient(
         45deg,
         transparent,
