Update WIP banner position behavior
So that it doesn't partially cover the content (esp. in the About page)

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    {% include wip-banner.html %} <!-- WIP banner message -->
     {% include topbar.html active=layout.active_nav %}
     <div class="content">
         {{ content }}
