--- a/styles/wip-banner.scss
+++ b/styles/wip-banner.scss
@@ -5,8 +5,11 @@
     width: 100%;
     padding: 0.5em;
 
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: 5;
+    animation: wip-banner-slide-down 0.5s;
 
     display: flex;
     align-items: center;
@@ -34,4 +37,8 @@
     height: 1em;
     width: auto;
     margin-right: 0.6em;
+}
+
+@keyframes wip-banner-slide-down {
+    from { transform: translateY(-100%); }
 }
