Rename "about me" nav text to "know me"

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-html_title: about me / comfyte
+html_title: know me / comfyte
 active_nav: about
 csslist:
     - /about/about.css
