Add disclaimer about outdated informations
+ update some strings and styles

--- a/_includes/wip-banner.html
+++ b/_includes/wip-banner.html
@@ -1,4 +1,4 @@
 <div class="wip-banner">
     {% include wip-exclamation-triangle.svg %}
-    <span>This site is currently under construction</span>
+    <span>Site is under construction; some informations might be outdated.</span>
 </div>
