--- a/about/about.scss
+++ b/about/about.scss
@@ -450,8 +450,9 @@ section.activities {
             font-weight: bold;
         }
         a.relevant_link {
+            font-size: 0.85em;
             line-height: 1.5rem; // HACK
-            
+
             display: inline-flex;
             align-items: center;
             svg {
