Increase font weight in disclaimer banner

--- a/styles/wip-banner.scss
+++ b/styles/wip-banner.scss
@@ -17,6 +17,7 @@
 
     font-family: "Inter", sans-serif;
     font-size: 0.8em;
+    font-weight: 500;
     color: black;
 
     $stripes-color: rgba(0, 0, 0, 0.05);
